--- a/web/templates/pedido.html
+++ b/web/templates/pedido.html
@@ -6,7 +6,7 @@
         <li>Pedido</li>
     </ul>
     
-    <form method="post" action="" class="register">
+    <form method="post" action="{% url 'web:compra' %}" class="register">
         {% csrf_token %}
         <article class="page-cont">
             <div class="page-styling">
@@ -49,7 +49,7 @@
                             <div class="prod-li-cont">
                                 <div class="prod-li-ttl-wrap">
                                     <p>
-                                        <a href="#">value.categoria</a>
+                                        <a href="#">{{value.categoria}}</a>
                                     </p>
                                     <h3><a href="product.html">{{ value.nombre }}</a></h3>
                                 </div>
@@ -81,9 +81,20 @@
                 {{ formpaypal.render }}
                 <div class="order-total">
                     <p class="cart-totals-ttl">Total</p>
-                    <p class="cart-totals-val">${{value.subtotal}}</p>
+                    <p class="cart-totals-val">${{request.session.cartMontoTotal}}</p>
                 </div>
             </div>
     </div>
+    <article class="page-cont">
+        <div class="page-styling">
+            <div class="auth-wrap">
+                <div class="auth-col">
+                    <p class="auth-submit">
+                        <input type="submit" value="Confirmar Pedido">
+                    </p>
+            </div>
+        </div>
+    </article>
+    </form>
 </div>
 {% endblock %}
